fixed some minor image alignment on mobile

--- a/scss/imports/_global.scss
+++ b/scss/imports/_global.scss
@@ -8,7 +8,12 @@
 img,object,embed { max-width: 100%; height: auto; }
 
 object,embed { height: 100%; }
-img { display: inline-block; -ms-interpolation-mode: bicubic; vertical-align: middle; }
+img { 
+	display: block;
+	@media screen and (min-width: $break-medium) {
+		display: inline-block; 
+	}
+	-ms-interpolation-mode: bicubic; vertical-align: middle; }
 
 .clearfix:before,
 .clearfix:after { content: " ";display: table;}
